--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jwt-decode": "^4.0.0",
     "mongodb": "^6.14.0",
     "mongoose": "^8.10.1",
+    "node-pre-gyp": "^0.17.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
